# wz

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: ARCHITECTURE.md  BUILDING.md  DRIVER_SAFETY.md  USER_GUIDE.md  WARZONE_TUNING.md
include/vigem/: Client.h
installer/: install.bat  installer.nsi  uninstall.bat
profiles/: generic_fps.json  warzone_aggressive.json  warzone_default.json  warzone_sniper.json  warzone_vehicle.json
src/: main.cpp
src/app/: app_controller.cpp  app_controller.h  osd_overlay.cpp  osd_overlay.h  tray_icon.cpp  tray_icon.h
src/core/: axis_processor.cpp  axis_processor.h  input_engine.cpp  input_engine.h  layer_manager.cpp  layer_manager.h  macro_engine.cpp  macro_engine.h  mapping_engine.cpp  mapping_engine.h  mode_switch.cpp  mode_switch.h  virtual_gamepad.cpp  virtual_gamepad.h
src/profile/: auto_switch.cpp  auto_switch.h  import_export.cpp  import_export.h  profile_manager.cpp  profile_manager.h  profile_schema.h
src/util/: hotkey_manager.cpp  hotkey_manager.h  logger.cpp  logger.h  process_monitor.cpp  process_monitor.h  timer.cpp  timer.h
tests/: CMakeLists.txt  test_axis_processor.cpp  test_macro_engine.cpp  test_main.cpp  test_mapping_engine.cpp  test_profile_manager.cpp
